# CayleyKernel

./: .gitignore  Properties.ipynb  README.md  Validate.ipynb  pyproject.toml  run_test.py
CayleyKernel/: __init__.py
cayleykernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wheelhouse/: cayleykernel-0.1.0-py3-none-manylinux_2_34_x86_64.whl
