[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cayleykernel"
version = "0.1.0"
description = "Python wrapper for CayleyKernel compiled binary"
authors = [
    { name = "Alika Perdue", email = "alikaperdue@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy',
    'cupy',
] # Add your python dependencies here if any

[tool.setuptools]
# This forces setuptools to only look inside your Python package folder
packages = ["CayleyKernel"]

[tool.setuptools.package-data]
# This ensures your compiled .so file inside the package is included
CayleyKernel = ["*.so"]

